--- a/_talks/2026-09-01-tutorial.md
+++ b/_talks/2026-09-01-tutorial.md
@@ -1,10 +1,10 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Knowledge Update in LLMd"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
 venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
+date: 2026-09-01
 location: "Berkeley, CA, USA"
 ---
 
