--- a/_talks/2026-09-01-tutorial.md
+++ b/_talks/2026-09-01-tutorial.md
@@ -1,5 +1,5 @@
 ---
-title: "Knowledge Update in LLMd"
+title: "Knowledge Update in LLM"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
